--- a/angular.json
+++ b/angular.json
@@ -20,18 +20,21 @@
             "outputPath": "dist/plant-diary",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.webmanifest",
+              "src/assets/placeholder-food.jpg"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -88,9 +91,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+                "src/assets/placeholder-food.jpg"
+
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
             "scripts": []
