--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.6",
+    "@angular/cdk": "^19.2.9",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.9",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/pwa": "^19.2.7",
     "@angular/router": "^19.2.0",
+    "@angular/service-worker": "^19.2.6",
+    "@types/hammerjs": "^2.0.46",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "unsplash-js": "^7.0.19",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
